# oxool-module-datacenter

./: .gitignore  Makefile.am  autoclean.sh  autogen.sh  configure.ac  datacenter.spec.in  datacenter.xml.in
debian/: changelog  control  copyright  oxool-module-datacenter.install  oxool-module-datacenter.postinst  rules
html/: admin.html
html/css/: datacenter.css
html/js/: AdminSocketConfigSettings.js
oxoffice_oxt/: Csv2Json.oxt
src/: Makefile.am  datacenter.cpp  datacenter.h  datacenter_file_db.cpp  datacenter_file_db.h
